@@ -163,7 +163,11 @@ sub simulate
     my $steady_state = defined $params->{steady_state} ? $params->{steady_state} : 0;
 
     # stochastic options
-    my $seed         = defined $params->{seed} ? $params->{seed} : floor(rand 2**31);
+#    my $seed         = defined $params->{seed} ? $params->{seed} : floor(rand 2**31);
+	if ( not defined $params->{seed} ){ 
+    		# do this so that NFsim gets the seed generated by BNG --LAH
+    		$params->{seed} = floor(rand 2**31);
+	}
 
     # check method
     unless ( $method )
